--- a/src/app/main/pages/video-streaming/video-streaming.component.html
+++ b/src/app/main/pages/video-streaming/video-streaming.component.html
@@ -17,7 +17,7 @@
     <div class="detail-film-container">
         <div class="name-detail">
             <h1 class="text-white text-4xl mt-4" [innerText]="currentMovieTitle"></h1>
-            <p class="text-2xl m-2" [innerText]="'Mùa '+currentMovieDetail.season"></p>
+            <p class="text-2xl m-2" [innerText]="'Mùa 1'"></p>
             <p class="text-xl m-2">{{currentMovieDetail.year}} - 1/1 Tập - {{currentMovieDetail.country}}</p>
 
             <p class="summary" [innerText]="currentMovieDetail.summary"></p>
