--- a/src/app/layouts/main/main-header/main-header.component.html
+++ b/src/app/layouts/main/main-header/main-header.component.html
@@ -1,150 +1,150 @@
 <header id="header" class="clearfix">
-  <div nz-row class="ant-row">
+  <div class="container">
+    <div nz-row class="ant-row">
 
-    <!-- Logo -->
-    <div nz-col="" class="ant-col ant-col-xs-20 ant-col-sm-20 ant-col-md-20 ant-col-lg-4 ant-col-xl-5 ant-col-xxl-6">
-      <a href="#!" id="logo">
-        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="#1890ff" class="size-12">
-          <path stroke-linecap="round" stroke-linejoin="round" d="M3.375 19.5h17.25m-17.25 0a1.125 1.125 0 0 1-1.125-1.125M3.375 19.5h1.5C5.496 19.5 6 18.996 6 18.375m-3.75 0V5.625m0 12.75v-1.5c0-.621.504-1.125 1.125-1.125m18.375 2.625V5.625m0 12.75c0 .621-.504 1.125-1.125 1.125m1.125-1.125v-1.5c0-.621-.504-1.125-1.125-1.125m0 3.75h-1.5A1.125 1.125 0 0 1 18 18.375M20.625 4.5H3.375m17.25 0c.621 0 1.125.504 1.125 1.125M20.625 4.5h-1.5C18.504 4.5 18 5.004 18 5.625m3.75 0v1.5c0 .621-.504 1.125-1.125 1.125M3.375 4.5c-.621 0-1.125.504-1.125 1.125M3.375 4.5h1.5C5.496 4.5 6 5.004 6 5.625m-3.75 0v1.5c0 .621.504 1.125 1.125 1.125m0 0h1.5m-1.5 0c-.621 0-1.125.504-1.125 1.125v1.5c0 .621.504 1.125 1.125 1.125m1.5-3.75C5.496 8.25 6 7.746 6 7.125v-1.5M4.875 8.25C5.496 8.25 6 8.754 6 9.375v1.5m0-5.25v5.25m0-5.25C6 5.004 6.504 4.5 7.125 4.5h9.75c.621 0 1.125.504 1.125 1.125m1.125 2.625h1.5m-1.5 0A1.125 1.125 0 0 1 18 7.125v-1.5m1.125 2.625c-.621 0-1.125.504-1.125 1.125v1.5m2.625-2.625c.621 0 1.125.504 1.125 1.125v1.5c0 .621-.504 1.125-1.125 1.125M18 5.625v5.25M7.125 12h9.75m-9.75 0A1.125 1.125 0 0 1 6 10.875M7.125 12C6.504 12 6 12.504 6 13.125m0-2.25C6 11.496 5.496 12 4.875 12M18 10.875c0 .621-.504 1.125-1.125 1.125M18 10.875c0 .621.504 1.125 1.125 1.125m-2.25 0c.621 0 1.125.504 1.125 1.125m-12 5.25v-5.25m0 5.25c0 .621.504 1.125 1.125 1.125h9.75c.621 0 1.125-.504 1.125-1.125m-12 0v-1.5c0-.621-.504-1.125-1.125-1.125M18 18.375v-5.25m0 5.25v-1.5c0-.621.504-1.125 1.125-1.125M18 13.125v1.5c0 .621.504 1.125 1.125 1.125M18 13.125c0-.621.504-1.125 1.125-1.125M6 13.125v1.5c0 .621-.504 1.125-1.125 1.125M6 13.125C6 12.504 5.496 12 4.875 12m-1.5 0h1.5m-1.5 0c-.621 0-1.125.504-1.125 1.125v1.5c0 .621.504 1.125 1.125 1.125M19.125 12h1.5m0 0c.621 0 1.125.504 1.125 1.125v1.5c0 .621-.504 1.125-1.125 1.125m-17.25 0h1.5m14.25 0h1.5" />
-        </svg>
-        
-        <strong class="text-[#1890ff]">UTEPlay</strong>
-      </a>
-    </div>
-
-    <!-- Menu -->
-    <div nz-col class="menu-row ant-col ant-col-xs-0 ant-col-sm-0 ant-col-md-0 ant-col-lg-11 ant-col-xl-10 ant-col-xxl-10">
-      <ul id="nav" nz-menu="" app-navagation="" class="menu-site ant-menu ant-menu-root ant-menu-light ant-menu-horizontal">
-        <li nz-menu-item="" nzSelected="" class="ant-menu-item">
-          <a href="#">Trang chủ</a>
-        </li>  
-        <li nz-menu-item="" class="ant-menu-item">
-          <a href="#">Kho phim</a>
-        </li>  
-        <li nz-menu-item="" class="ant-menu-item">
-          <a href="#">Phim bộ</a>
-        </li>  
-        <li nz-menu-item="" class="ant-menu-item">
-          <a href="#">Phim lẻ</a>
-        </li>  
-        <li nz-menu-item="" class="ant-menu-item">
-          <a href="#">Phim thuê</a>
-        </li>  
-        <li nz-menu-item="" class="ant-menu-item">
-          <a href="#">Mua gói</a>
-        </li>  
-      </ul>
-    </div>
-
-    <!-- Action icons -->
-    <div nz-col class="ant-col ant-col-xs-0 ant-col-sm-0 ant-col-md-0 ant-col-lg-4 ant-col-xl-3 ant-col-xxl-4">
-      <ul id="nav" nz-menu="" app-navagation="" class="menu-site ant-menu ant-menu-root ant-menu-light ant-menu-horizontal">
-        <!-- Search -->
-        <li class="icon">
-          <a href="#">
-            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="white" class="size-6">
-              <path stroke-linecap="round" stroke-linejoin="round" d="m21 21-5.197-5.197m0 0A7.5 7.5 0 1 0 5.196 5.196a7.5 7.5 0 0 0 10.607 10.607Z" />
-            </svg>
-          </a> 
-        </li>  
-        <!-- Cart -->
-        <li class="icon">
-          <a href="#">
-            <nz-badge [nzCount]="5">
+      <!-- Logo -->
+      <div nz-col="" class="ant-col ant-col-xs-20 ant-col-sm-20 ant-col-md-20 ant-col-lg-20 ant-col-xl-3 ant-col-xxl-4">
+        <a href="#!" id="logo">
+          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="#1890ff" class="size-12">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M3.375 19.5h17.25m-17.25 0a1.125 1.125 0 0 1-1.125-1.125M3.375 19.5h1.5C5.496 19.5 6 18.996 6 18.375m-3.75 0V5.625m0 12.75v-1.5c0-.621.504-1.125 1.125-1.125m18.375 2.625V5.625m0 12.75c0 .621-.504 1.125-1.125 1.125m1.125-1.125v-1.5c0-.621-.504-1.125-1.125-1.125m0 3.75h-1.5A1.125 1.125 0 0 1 18 18.375M20.625 4.5H3.375m17.25 0c.621 0 1.125.504 1.125 1.125M20.625 4.5h-1.5C18.504 4.5 18 5.004 18 5.625m3.75 0v1.5c0 .621-.504 1.125-1.125 1.125M3.375 4.5c-.621 0-1.125.504-1.125 1.125M3.375 4.5h1.5C5.496 4.5 6 5.004 6 5.625m-3.75 0v1.5c0 .621.504 1.125 1.125 1.125m0 0h1.5m-1.5 0c-.621 0-1.125.504-1.125 1.125v1.5c0 .621.504 1.125 1.125 1.125m1.5-3.75C5.496 8.25 6 7.746 6 7.125v-1.5M4.875 8.25C5.496 8.25 6 8.754 6 9.375v1.5m0-5.25v5.25m0-5.25C6 5.004 6.504 4.5 7.125 4.5h9.75c.621 0 1.125.504 1.125 1.125m1.125 2.625h1.5m-1.5 0A1.125 1.125 0 0 1 18 7.125v-1.5m1.125 2.625c-.621 0-1.125.504-1.125 1.125v1.5m2.625-2.625c.621 0 1.125.504 1.125 1.125v1.5c0 .621-.504 1.125-1.125 1.125M18 5.625v5.25M7.125 12h9.75m-9.75 0A1.125 1.125 0 0 1 6 10.875M7.125 12C6.504 12 6 12.504 6 13.125m0-2.25C6 11.496 5.496 12 4.875 12M18 10.875c0 .621-.504 1.125-1.125 1.125M18 10.875c0 .621.504 1.125 1.125 1.125m-2.25 0c.621 0 1.125.504 1.125 1.125m-12 5.25v-5.25m0 5.25c0 .621.504 1.125 1.125 1.125h9.75c.621 0 1.125-.504 1.125-1.125m-12 0v-1.5c0-.621-.504-1.125-1.125-1.125M18 18.375v-5.25m0 5.25v-1.5c0-.621.504-1.125 1.125-1.125M18 13.125v1.5c0 .621.504 1.125 1.125 1.125M18 13.125c0-.621.504-1.125 1.125-1.125M6 13.125v1.5c0 .621-.504 1.125-1.125 1.125M6 13.125C6 12.504 5.496 12 4.875 12m-1.5 0h1.5m-1.5 0c-.621 0-1.125.504-1.125 1.125v1.5c0 .621.504 1.125 1.125 1.125M19.125 12h1.5m0 0c.621 0 1.125.504 1.125 1.125v1.5c0 .621-.504 1.125-1.125 1.125m-17.25 0h1.5m14.25 0h1.5" />
+          </svg>
+          
+          <strong class="text-[#1890ff]">UTEPlay</strong>
+        </a>
+      </div>
+  
+      <!-- Menu -->
+      <div nz-col class="menu-row ant-col ant-col-xs-0 ant-col-sm-0 ant-col-md-0 ant-col-lg-0 ant-col-xl-12 ant-col-xxl-10">
+        <ul id="nav" nz-menu="" app-navagation="" class="menu-site ant-menu ant-menu-root ant-menu-light ant-menu-horizontal">
+          <li #home nz-menu-item="" class="ant-menu-item">
+            <a routerLink="/home">Trang chủ</a>
+          </li>  
+          <li #series nz-menu-item="" class="ant-menu-item">
+            <a routerLink="/series">Phim bộ</a>
+          </li>  
+          <li #movie nz-menu-item="" class="ant-menu-item">
+            <a routerLink="/movie">Phim lẻ</a>
+          </li>  
+          <li nz-menu-item="" class="ant-menu-item">
+            <a routerLink="home">Phim thuê</a>
+          </li>  
+          <li #pricing nz-menu-item="" class="ant-menu-item">
+            <a routerLink="/pricing">Mua gói</a>
+          </li>  
+        </ul>
+      </div>
+  
+      <!-- Action icons -->
+      <div nz-col class="ant-col ant-col-xs-0 ant-col-sm-0 ant-col-md-0 ant-col-lg-0 ant-col-xl-3 ant-col-xxl-4">
+        <ul id="nav" nz-menu="" app-navagation="" class="menu-site ant-menu ant-menu-root ant-menu-light ant-menu-horizontal">
+          <!-- Search -->
+          <li class="icon">
+            <a routerLink="search">
               <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="white" class="size-6">
-                <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
+                <path stroke-linecap="round" stroke-linejoin="round" d="m21 21-5.197-5.197m0 0A7.5 7.5 0 1 0 5.196 5.196a7.5 7.5 0 0 0 10.607 10.607Z" />
               </svg>
-            </nz-badge>
-          </a> 
-        </li>  
-        <!-- Notification -->
-        <li class="icon">
-          <a href="#">
-            <nz-badge [nzCount]="5">
-              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="white" class="size-6">
-                <path stroke-linecap="round" stroke-linejoin="round" d="M14.857 17.082a23.848 23.848 0 0 0 5.454-1.31A8.967 8.967 0 0 1 18 9.75V9A6 6 0 0 0 6 9v.75a8.967 8.967 0 0 1-2.312 6.022c1.733.64 3.56 1.085 5.455 1.31m5.714 0a24.255 24.255 0 0 1-5.714 0m5.714 0a3 3 0 1 1-5.714 0" />
-              </svg>
-            </nz-badge>
-          </a> 
-        </li>   
-      </ul>
-    </div>
-
-    <!-- Auth button -->
-    <div nz-col="" class="ant-col ant-col-xs-0 ant-col-sm-0 ant-col-md-0 ant-col-lg-5 ant-col-xl-4 ant-col-xxl-4">
-      <ul id="nav" nz-menu="" app-navagation="" class="menu-site ant-menu ant-menu-root ant-menu-light ant-menu-horizontal">
-        <li nz-menu-item="" class="ant-menu-item">
-          <a href="#" id="btn-auth">Đăng nhập</a>
-        </li>
-        <li nz-menu-item="" class="ant-menu-item">
-          <a href="#" id="btn-auth">Đăng ký</a>
-        </li>
-      </ul>
-    </div>
-
-    <!-- Hamburger button -->
-    <div nz-col class="ant-col ant-col-xs-2 ant-col-sm-2 ant-col-md-2 ant-col-lg-0 ant-col-xl-0 ant-col-xxl-0">
-      <div id="hamburger" (click)="openMenu()">
-        <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 17 14">
-          <path stroke="white" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 1h15M1 7h15M1 13h15"/>
-        </svg>
-      </div>  
-    </div>
-
-    <!-- Responsive menu -->
-    <nz-drawer
-      [nzClosable]="true"
-      [nzVisible]="visible"
-      [nzPlacement]="placement"
-      nzTitle="UTEPlay"
-      (nzOnClose)="closeMenu()"
-    >
-      <ng-container *nzDrawerContent>
-        <ul class="nav__mobile-list">
-          <li>
-            <a href="#!" class="nav__mobile-link">Trang chủ</a>
+            </a> 
+          </li>  
+          <!-- Cart -->
+          <li class="icon">
+            <a href="#">
+              <nz-badge [nzCount]="5">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="white" class="size-6">
+                  <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
+                </svg>
+              </nz-badge>
+            </a> 
+          </li>  
+          <!-- Notification -->
+          <li class="icon">
+            <a href="#">
+              <nz-badge [nzCount]="5">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="white" class="size-6">
+                  <path stroke-linecap="round" stroke-linejoin="round" d="M14.857 17.082a23.848 23.848 0 0 0 5.454-1.31A8.967 8.967 0 0 1 18 9.75V9A6 6 0 0 0 6 9v.75a8.967 8.967 0 0 1-2.312 6.022c1.733.64 3.56 1.085 5.455 1.31m5.714 0a24.255 24.255 0 0 1-5.714 0m5.714 0a3 3 0 1 1-5.714 0" />
+                </svg>
+              </nz-badge>
+            </a> 
+          </li>   
+        </ul>
+      </div>
+  
+      <!-- Auth button -->
+      <div nz-col="" class="ant-col ant-col-xs-0 ant-col-sm-0 ant-col-md-0 ant-col-lg-0 ant-col-xl-6 ant-col-xxl-4">
+        <ul id="nav" nz-menu="" app-navagation="" class="menu-site ant-menu ant-menu-root ant-menu-light ant-menu-horizontal">
+          <li nz-menu-item="" class="ant-menu-item">
+            <a routerLink="login" id="btn-auth">Đăng nhập</a>
           </li>
-          <li>
-            <a href="#!" class="nav__mobile-link">Kho phim</a>
-          </li>
-          <li>
-            <a href="#!" class="nav__mobile-link">Phim bộ</a>
-          </li>
-          <li>
-            <a href="#!" class="nav__mobile-link">Phim lẻ</a>
-          </li>
-          <li>
-            <a href="#!" class="nav__mobile-link">Phim thuê</a>
-          </li>
-          <li>
-            <a href="#!" class="nav__mobile-link">Mua gói</a>
-          </li>
-          <li>
-            <a href="#!" class="nav__mobile-link">Tìm kiếm phim</a>
-          </li>
-          <li>
-            <a href="#!" class="nav__mobile-link">Giỏ hàng</a>
-            <nz-badge [nzCount]="5">
-              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="black" class="size-6">
-                <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
-              </svg>
-            </nz-badge>
-          </li>
-          <li>
-            <a href="#!" class="nav__mobile-link">Thông báo</a>
-            <nz-badge [nzCount]="5">
-              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="black" class="size-6">
-                <path stroke-linecap="round" stroke-linejoin="round" d="M14.857 17.082a23.848 23.848 0 0 0 5.454-1.31A8.967 8.967 0 0 1 18 9.75V9A6 6 0 0 0 6 9v.75a8.967 8.967 0 0 1-2.312 6.022c1.733.64 3.56 1.085 5.455 1.31m5.714 0a24.255 24.255 0 0 1-5.714 0m5.714 0a3 3 0 1 1-5.714 0" />
-              </svg>
-            </nz-badge>
-          </li>
-          <li>
-            <a href="#!" class="nav__mobile-link">Đăng nhập/đăng ký</a>
+          <li nz-menu-item="" class="ant-menu-item">
+            <a routerLink="login" id="btn-auth">Đăng ký</a>
           </li>
         </ul>
-      </ng-container> 
-    </nz-drawer>
-    
+      </div>
+  
+      <!-- Hamburger button -->
+      <div nz-col class="ant-col ant-col-xs-2 ant-col-sm-2 ant-col-md-2 ant-col-lg-2 ant-col-xl-0 ant-col-xxl-0">
+        <div id="hamburger" (click)="openMenu()">
+          <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 17 14">
+            <path stroke="white" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 1h15M1 7h15M1 13h15"/>
+          </svg>
+        </div>  
+      </div>
+  
+      <!-- Responsive menu -->
+      <nz-drawer
+        [nzClosable]="true"
+        [nzVisible]="visible"
+        [nzPlacement]="placement"
+        nzTitle="UTEPlay"
+        (nzOnClose)="closeMenu()"
+      >
+        <ng-container *nzDrawerContent>
+          <ul class="nav__mobile-list">
+            <li>
+              <a href="#!" class="nav__mobile-link">Trang chủ</a>
+            </li>
+            <li>
+              <a href="#!" class="nav__mobile-link">Kho phim</a>
+            </li>
+            <li>
+              <a href="#!" class="nav__mobile-link">Phim bộ</a>
+            </li>
+            <li>
+              <a href="#!" class="nav__mobile-link">Phim lẻ</a>
+            </li>
+            <li>
+              <a href="#!" class="nav__mobile-link">Phim thuê</a>
+            </li>
+            <li>
+              <a href="#!" class="nav__mobile-link">Mua gói</a>
+            </li>
+            <li>
+              <a href="#!" class="nav__mobile-link">Tìm kiếm phim</a>
+            </li>
+            <li>
+              <a href="#!" class="nav__mobile-link">Giỏ hàng</a>
+              <nz-badge [nzCount]="5">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="black" class="size-6">
+                  <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
+                </svg>
+              </nz-badge>
+            </li>
+            <li>
+              <a href="#!" class="nav__mobile-link">Thông báo</a>
+              <nz-badge [nzCount]="5">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="black" class="size-6">
+                  <path stroke-linecap="round" stroke-linejoin="round" d="M14.857 17.082a23.848 23.848 0 0 0 5.454-1.31A8.967 8.967 0 0 1 18 9.75V9A6 6 0 0 0 6 9v.75a8.967 8.967 0 0 1-2.312 6.022c1.733.64 3.56 1.085 5.455 1.31m5.714 0a24.255 24.255 0 0 1-5.714 0m5.714 0a3 3 0 1 1-5.714 0" />
+                </svg>
+              </nz-badge>
+            </li>
+            <li>
+              <a href="#!" class="nav__mobile-link">Đăng nhập/đăng ký</a>
+            </li>
+          </ul>
+        </ng-container> 
+      </nz-drawer>
+      
+    </div>
   </div>
+  
 </header>
 
