--- a/src/app/management/pages/dashboard/dashboard.component.html
+++ b/src/app/management/pages/dashboard/dashboard.component.html
@@ -22,7 +22,7 @@
             <a routerLink="/management/category-management">Quản lí danh mục phim</a>
           </li>
           <li nz-menu-item nzMatchRouter>
-            <a routerLink="/management/b-management">Quản lí thể loại phim</a>
+            <a routerLink="/management/banner-management">Quản lí banner phim</a>
           </li>
           <li nz-menu-item nzMatchRouter>
             <a routerLink="/management/bill-management">Quản lí hóa đơn</a>
