create: create gerne-movie complate template and update UI movie-list, category-movie component

--- a/src/app/management/pages/dashboard/dashboard.component.html
+++ b/src/app/management/pages/dashboard/dashboard.component.html
@@ -19,6 +19,9 @@
             <a routerLink="/management/film-management">Quản lí phim</a>
           </li>
           <li nz-menu-item nzMatchRouter>
+            <a routerLink="/management/genre-management">Quản lí thể loại</a>
+          </li>
+          <li nz-menu-item nzMatchRouter>
             <a routerLink="/management/category-management">Quản lí danh mục phim</a>
           </li>
           <li nz-menu-item nzMatchRouter>
