--- a/src/app/management/pages/genre-movie/genre-movie.component.html
+++ b/src/app/management/pages/genre-movie/genre-movie.component.html
@@ -3,9 +3,9 @@
         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
             class="w-6 h-6 mr-2">
             <path stroke-linecap="round" stroke-linejoin="round"
-                d="M13.5 16.875h3.375m0 0h3.375m-3.375 0V13.5m0 3.375v3.375M6 10.5h2.25a2.25 2.25 0 0 0 2.25-2.25V6a2.25 2.25 0 0 0-2.25-2.25H6A2.25 2.25 0 0 0 3.75 6v2.25A2.25 2.25 0 0 0 6 10.5Zm0 9.75h2.25A2.25 2.25 0 0 0 10.5 18v-2.25a2.25 2.25 0 0 0-2.25-2.25H6a2.25 2.25 0 0 0-2.25 2.25V18A2.25 2.25 0 0 0 6 20.25Zm9.75-9.75H18a2.25 2.25 0 0 0 2.25-2.25V6A2.25 2.25 0 0 0 18 3.75h-2.25A2.25 2.25 0 0 0 13.5 6v2.25a2.25 2.25 0 0 0 2.25 2.25Z" />
+                d="m6.115 5.19.319 1.913A6 6 0 0 0 8.11 10.36L9.75 12l-.387.775c-.217.433-.132.956.21 1.298l1.348 1.348c.21.21.329.497.329.795v1.089c0 .426.24.815.622 1.006l.153.076c.433.217.956.132 1.298-.21l.723-.723a8.7 8.7 0 0 0 2.288-4.042 1.087 1.087 0 0 0-.358-1.099l-1.33-1.108c-.251-.21-.582-.299-.905-.245l-1.17.195a1.125 1.125 0 0 1-.98-.314l-.295-.295a1.125 1.125 0 0 1 0-1.591l.13-.132a1.125 1.125 0 0 1 1.3-.21l.603.302a.809.809 0 0 0 1.086-1.086L14.25 7.5l1.256-.837a4.5 4.5 0 0 0 1.528-1.732l.146-.292M6.115 5.19A9 9 0 1 0 17.18 4.64M6.115 5.19A8.965 8.965 0 0 1 12 3c1.929 0 3.716.607 5.18 1.64" />
         </svg>
-        Quản lý Danh mục phim
+        Quản lý Thể loại phim
     </div>
 
     <div class="mb-5 border-solid border-slate-600 border p-3 rounded-xl ring-offset ring-0">
@@ -13,10 +13,10 @@
             <div class="search-container flex items-center space-x-2 text-white text-base relative">
                 Search:
                 <div class="relative flex items-center">
-                    <input class="ml-5 input-search pr-8" nz-input placeholder="Search by name" [(ngModel)]="valueSearch"
-                        (ngModelChange)="onSearchChange()" name="search" type="text" />
-                    <svg *ngIf="!valueSearch" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                        stroke="currentColor" class="search-icon absolute right-2">
+                    <input class="ml-5 input-search pr-8" nz-input placeholder="Search by name"
+                        [(ngModel)]="valueSearch" (ngModelChange)="onSearchChange()" name="search" type="text" />
+                    <svg *ngIf="!valueSearch" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                        stroke-width="1.5" stroke="currentColor" class="search-icon absolute right-2">
                         <path stroke-linecap="round" stroke-linejoin="round"
                             d="m21 21-5.197-5.197m0 0A7.5 7.5 0 1 0 5.196 5.196a7.5 7.5 0 0 0 10.607 10.607Z" />
                     </svg>
@@ -24,23 +24,23 @@
             </div>
 
             <button (click)="showModalAdd()" nz-button nzType="primary"
-                class="bg-blue-700 mr-3 hover:bg-blue-900 border border-transparent hover:border-blue-300 rounded flex p-1 pr-1.5 text-white font-semibold">
+                class="bg-blue-700 hover:bg-blue-900 border border-transparent hover:border-blue-300 rounded flex p-1 pr-1.5 text-white font-semibold mr-3">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="size-5">
                     <path
                         d="M10.75 4.75a.75.75 0 0 0-1.5 0v4.5h-4.5a.75.75 0 0 0 0 1.5h4.5v4.5a.75.75 0 0 0 1.5 0v-4.5h4.5a.75.75 0 0 0 0-1.5h-4.5v-4.5Z" />
                 </svg>
-                Add Category
+                Add Gerne
             </button>
         </div>
-        <!-- <div class="card-container grid grid-cols-1 sm:grid-cols-2 gap-4 p-4 m-1 border-solid border-slate-300 border rounded-xl ring-offset ring-0">-->
-        <div class="card-container p-4 m-1 border-solid border-slate-300 border rounded-xl ring-offset ring-0">
-            <nz-card *ngFor="let category of filteredCategories" class="category-card">
+        <div
+            class="card-container grid grid-cols-1 sm:grid-cols-2 gap-4 p-4 m-1 border-solid border-slate-300 border rounded-xl ring-offset ring-0">
+            <nz-card *ngFor="let genre of filteredGenre" class="category-card">
                 <div class="card-content">
                     <div class="card-info">
                         <div class="flex">
-                            <span class="text-2xl font-semibold mr-2 text-blue-700">{{ category.name }}</span>
+                            <span class="text-2xl font-semibold mr-2 text-blue-700">{{ genre.name }}</span>
                             <div class="flex items-center">
-                                <ng-container *ngIf="category.isActive; else falseIcon">
+                                <ng-container *ngIf="genre.isActive; else falseIcon">
                                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
                                         stroke-width="1.5" stroke="currentColor" class="w-6 h-6 mr-2 text-green-500">
                                         <path stroke-linecap="round" stroke-linejoin="round"
@@ -57,18 +57,17 @@
                             </div>
                         </div>
                         <div class="additional-info">
-                            <p><strong>Description:</strong> {{ category.description }}</p>
-                            <p><strong>Category:</strong> {{ category.category }}</p>
-                            <p><strong>Album:</strong> {{ category.album }}</p>
+                            <p><strong>Description:</strong> {{ genre.description }}</p>
+                            <p><strong>Category Name:</strong> {{ genre.categoryname }}</p>
                             <p class="mr-2"><strong>Status:</strong>
-                                <nz-switch nzSize="small" class="ml-2 bg-red" [(ngModel)]="category.isActive"
+                                <nz-switch nzSize="small" class="ml-2 bg-red" [(ngModel)]="genre.isActive"
                                     [ngModelOptions]="{ standalone: true }"></nz-switch>
                             </p>
                             <div
                                 class="flex mt-14 gap-4 border-solid border-slate-600 border p-3 rounded-xl ring-offset ring-0 w-24">
                                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"
                                     class="size-7 bg-slate-800 text-green-600 cursor-pointer"
-                                    (click)="showModalUpdate()">
+                                    (click)="showModalUpdate(genre)">
                                     <path
                                         d="M21.731 2.269a2.625 2.625 0 0 0-3.712 0l-1.157 1.157 3.712 3.712 1.157-1.157a2.625 2.625 0 0 0 0-3.712ZM19.513 8.199l-3.712-3.712-8.4 8.4a5.25 5.25 0 0 0-1.32 2.214l-.8 2.685a.75.75 0 0 0 .933.933l2.685-.8a5.25 5.25 0 0 0 2.214-1.32l8.4-8.4Z" />
                                     <path
@@ -83,7 +82,7 @@
                             </div>
                         </div>
                     </div>
-                    <img [src]="category.image" alt="{{ category.name }}" class="category-image">
+                    <img [src]="genre.image" alt="{{ genre.name }}" class="category-image">
                 </div>
             </nz-card>
         </div>
@@ -104,52 +103,48 @@
                     clip-rule="evenodd" />
             </svg>
 
-            <span class="span-add">Add Category</span>
+            <span class="span-add">Add Genre</span>
         </div>
     </ng-template>
     <ng-container *nzModalContent>
         <fieldset class="fieldset">
-            <legend class="text-blue-700 text-2xl w-28 ml-2"> Category </legend>
+            <legend class="text-blue-700 text-2xl w-28 ml-2"> Gerne </legend>
             <form [formGroup]="form" nz-form>
                 <nz-form-item>
-                    <nz-form-label nzRequired>Category Name</nz-form-label>
-                    <nz-form-control>
-                        <input class="text-white" nz-input placeholder="Please enter category name"
-                            formControlName="name" />
+                    <nz-form-label nzRequired>Genre Name</nz-form-label>
+                    <nz-form-control [nzErrorTip]="'Please enter genre name!'">
+                        <input nz-input placeholder="Please enter genre name" formControlName="name" />
                     </nz-form-control>
                 </nz-form-item>
+
                 <nz-form-item>
                     <nz-form-label nzRequired>Description</nz-form-label>
-                    <nz-form-control>
+                    <nz-form-control [nzErrorTip]="'Please enter description!'">
                         <textarea nz-input placeholder="Enter description" [nzAutosize]="{ minRows: 2, maxRows: 7 }"
                             formControlName="description"></textarea>
                     </nz-form-control>
                 </nz-form-item>
+
                 <nz-form-item>
-                    <nz-form-label nzRequired>Image URL</nz-form-label>
+                    <nz-form-label>Category Name</nz-form-label>
+                    <nz-form-control>
+                        <input nz-input placeholder="Enter category name" formControlName="categoryname" />
+                    </nz-form-control>
+                </nz-form-item>
+
+                <nz-form-item>
+                    <nz-form-label>Image URL</nz-form-label>
                     <nz-form-control>
                         <input nz-input placeholder="Enter image URL" formControlName="image" />
                     </nz-form-control>
                 </nz-form-item>
+
                 <nz-form-item>
-                    <nz-form-label nzRequired>Category</nz-form-label>
-                    <nz-form-control>
-                        <input nz-input placeholder="Enter category" formControlName="category" />
-                    </nz-form-control>
-                </nz-form-item>
-                <nz-form-item>
-                    <nz-form-label nzRequired>Album</nz-form-label>
-                    <nz-form-control>
-                        <input nz-input placeholder="Enter album" formControlName="album" />
-                    </nz-form-control>
-                </nz-form-item>
-                <nz-form-item class="flex items-center">
-                    <nz-form-label class="mr-4">Active</nz-form-label>
+                    <nz-form-label>Active</nz-form-label>
                     <nz-form-control>
                         <nz-switch formControlName="isActive"></nz-switch>
                     </nz-form-control>
                 </nz-form-item>
-
             </form>
         </fieldset>
     </ng-container>
@@ -165,54 +160,51 @@
                 <path
                     d="M5.25 5.25a3 3 0 0 0-3 3v10.5a3 3 0 0 0 3 3h10.5a3 3 0 0 0 3-3V13.5a.75.75 0 0 0-1.5 0v5.25a1.5 1.5 0 0 1-1.5 1.5H5.25a1.5 1.5 0 0 1-1.5-1.5V8.25a1.5 1.5 0 0 1 1.5-1.5h5.25a.75.75 0 0 0 0-1.5H5.25Z" />
             </svg>
-            <span class="text-2xl text-white">Update Category</span>
+            <span class="text-2xl text-white">Update Gerne</span>
         </div>
     </ng-template>
     <ng-container *nzModalContent>
         <fieldset class="fieldset">
-            <legend class="text-blue-700 text-2xl w-28 ml-2"> Category </legend>
-            <form [formGroup]="form" nz-form>
+            <legend class="text-blue-700 text-2xl w-28 ml-2">Genre</legend>
+            <form [formGroup]="formUpdate" nz-form>
                 <nz-form-item>
-                    <nz-form-label nzRequired>Category Name</nz-form-label>
-                    <nz-form-control>
-                        <input class="text-white" nz-input placeholder="Please enter category name"
-                            formControlName="name" />
+                    <nz-form-label nzRequired>Genre Name</nz-form-label>
+                    <nz-form-control [nzErrorTip]="'Please enter genre name!'">
+                        <input nz-input placeholder="Please enter genre name" formControlName="name" />
                     </nz-form-control>
                 </nz-form-item>
+
                 <nz-form-item>
                     <nz-form-label nzRequired>Description</nz-form-label>
-                    <nz-form-control>
+                    <nz-form-control [nzErrorTip]="'Please enter description!'">
                         <textarea nz-input placeholder="Enter description" [nzAutosize]="{ minRows: 2, maxRows: 7 }"
                             formControlName="description"></textarea>
                     </nz-form-control>
                 </nz-form-item>
+
                 <nz-form-item>
-                    <nz-form-label nzRequired>Image URL</nz-form-label>
+                    <nz-form-label>Category Name</nz-form-label>
+                    <nz-form-control>
+                        <input nz-input placeholder="Enter category name" formControlName="categoryname" />
+                    </nz-form-control>
+                </nz-form-item>
+
+                <nz-form-item>
+                    <nz-form-label>Image URL</nz-form-label>
                     <nz-form-control>
                         <input nz-input placeholder="Enter image URL" formControlName="image" />
                     </nz-form-control>
                 </nz-form-item>
+
                 <nz-form-item>
-                    <nz-form-label nzRequired>Category</nz-form-label>
-                    <nz-form-control>
-                        <input nz-input placeholder="Enter category" formControlName="category" />
-                    </nz-form-control>
-                </nz-form-item>
-                <nz-form-item>
-                    <nz-form-label nzRequired>Album</nz-form-label>
-                    <nz-form-control>
-                        <input nz-input placeholder="Enter album" formControlName="album" />
-                    </nz-form-control>
-                </nz-form-item>
-                <nz-form-item class="flex items-center">
-                    <nz-form-label class="mr-4">Active</nz-form-label>
+                    <nz-form-label>Active</nz-form-label>
                     <nz-form-control>
                         <nz-switch formControlName="isActive"></nz-switch>
                     </nz-form-control>
                 </nz-form-item>
-
             </form>
         </fieldset>
+
     </ng-container>
 </nz-modal>
 
@@ -226,7 +218,7 @@
                     d="M16.5 4.478v.227a48.816 48.816 0 0 1 3.878.512.75.75 0 1 1-.256 1.478l-.209-.035-1.005 13.07a3 3 0 0 1-2.991 2.77H8.084a3 3 0 0 1-2.991-2.77L4.087 6.66l-.209.035a.75.75 0 0 1-.256-1.478A48.567 48.567 0 0 1 7.5 4.705v-.227c0-1.564 1.213-2.9 2.816-2.951a52.662 52.662 0 0 1 3.369 0c1.603.051 2.815 1.387 2.815 2.951Zm-6.136-1.452a51.196 51.196 0 0 1 3.273 0C14.39 3.05 15 3.684 15 4.478v.113a49.488 49.488 0 0 0-6 0v-.113c0-.794.609-1.428 1.364-1.452Zm-.355 5.945a.75.75 0 1 0-1.5.058l.347 9a.75.75 0 1 0 1.499-.058l-.346-9Zm5.48.058a.75.75 0 1 0-1.498-.058l-.347 9a.75.75 0 0 0 1.5.058l.345-9Z"
                     clip-rule="evenodd" />
             </svg>
-            <span class="text-2xl text-white">Delete Movie</span>
+            <span class="text-2xl text-white">Delete Genre</span>
         </div>
     </ng-template>
     <ng-container *nzModalContent>
