modified:   src/app/app.routes.ts 	modified:   src/app/auth/login/login.component.css 	modified:   src/app/auth/login/login.component.html 	modified:   src/app/auth/login/login.component.ts 	modified:   src/app/auth/reset-password/reset-password.component.css 	modified:   src/app/auth/reset-password/reset-password.component.html

--- a/src/app/auth/reset-password/reset-password.component.html
+++ b/src/app/auth/reset-password/reset-password.component.html
@@ -1,1 +1,12 @@
-<p>reset-password works!</p>
+<div class="page-content">
+  <div class="grid-container">
+    <div class="item1">EMail</div>
+    <div class="item2"> <input placeholder="vidu@mail.com"></div>
+    <div class="item1">Mã Bí Mật</div>
+    <div class="item2"><input placeholder="1234-5678"></div>
+    <div class="item1">Mật Khẩu</div>
+    <div class="item2"> <input type="password"></div>
+    <div class="item1">Lặp Lại Mật Khẩu</div>
+    <div class="item2"> <input type="password"></div>
+  </div>
+</div>
