--- a/src/app/auth/login/login.component.css
+++ b/src/app/auth/login/login.component.css
@@ -1,300 +1,359 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat:400,800');
 
-    * {
-        box-sizing: border-box;
-    }
+* {
+    box-sizing: border-box;
+}
 
-    body {
-        background: #f80505;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
+body {
+    background: #f80505;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 
-        height: 100vh;
-        margin: -20px 0 50px;
-        width: 100%;
-    }
+    height: 100vh;
+    margin: -20px 0 50px;
+    width: 100%;
+}
 
-    h1 {
-        font-weight: bold;
-        margin: 0;
-    }
+h1 {
+    font-weight: bold;
+    margin: 0;
+}
 
-    h2 {
-        text-align: center;
-    }
+h2 {
+    text-align: center;
+}
 
-    p {
-        font-size: 14px;
-        font-weight: 100;
-        line-height: 20px;
-        letter-spacing: 0.5px;
-        margin: 20px 0 30px;
-    }
+p {
+    font-size: 14px;
+    font-weight: 100;
+    line-height: 20px;
+    letter-spacing: 0.5px;
+    margin: 20px 0 30px;
+}
 
-    span {
-        font-size: 12px;
-    }
+span {
+    font-size: 12px;
+}
 
-    a {
-        color: #333;
-        font-size: 14px;
-        text-decoration: none;
-        margin: 15px 0;
-    }
+a {
+    color: #333;
+    font-size: 14px;
+    text-decoration: none;
+    margin: 15px 0;
+}
 
-    button {
-        border-radius: 20px;
-        border: 1px solid #FF4B2B;
-        background-color: #FF4B2B;
-        color: #FFFFFF;
-        font-size: 12px;
-        font-weight: bold;
-        padding: 12px 45px;
-        letter-spacing: 1px;
-        text-transform: uppercase;
-        transition: transform 80ms ease-in;
-    }
+.deffault-button {
+    border-radius: 20px;
+    border: 1px solid #FF4B2B;
+    background-color: #FF4B2B;
+    color: #FFFFFF;
+    font-size: 12px;
+    font-weight: bold;
+    padding: 12px 45px;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    transition: transform 80ms ease-in;
+}
 
-    button:active {
-        transform: scale(0.95);
-    }
+.deffault-button:active {
+    transform: scale(0.95);
+}
 
-    button:focus {
-        outline: none;
-    }
+.deffault-button:focus {
+    outline: none;
+}
 
-    button.ghost {
-        background-color: transparent;
-        border-color: #FFFFFF;
-    }
+.deffault-button.ghost {
+    background-color: transparent;
+    border-color: #FFFFFF;
+}
 
-    form {
-        background-color: #FFFFFF;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        flex-direction: column;
-        padding: 0 50px;
-        height: 100%;
-        text-align: center;
-    }
+form {
+    background-color: #FFFFFF;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    padding: 0 50px;
+    height: 100%;
+    text-align: center;
+}
 
-    input {
-        background-color: #eee;
-        border: none;
-        padding: 12px 15px;
-        margin: 8px 0;
-        width: 100%;
-    }
-    .page-content{
-        font-family: 'Montserrat',sans-serif;
-        background-image: url(https://i.pinimg.com/originals/6f/7c/63/6f7c63991726d61d63730682e791d78c.gif);
-        background-color: #eee;
-        display: flex;
-        width: 100%;
-        height: 100%;
-        justify-content: center;
-        align-items: center;
-    }
-    .back-button{
-        position: absolute;
-        left: 5%;
-        top: 5%;
-    }
-    .container {
-        background-color: #000000;
-        border-radius: 10px;
-        box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25),
-            0 10px 10px rgba(0, 0, 0, 0.22);
-        position: relative;
-        overflow: hidden;
-        width: 768px;
-        max-width: 100%;
-        display: flex;
-        min-height: 480px;
-        justify-content: center;
-        align-items: center;
-    }
+input {
+    background-color: rgb(232, 240, 254);;
+    border: none;
+    padding: 12px 15px;
+    margin: 8px 0;
+    width: 100%;
+}
 
-    .form-container {
-        position: absolute;
-        top: 0;
-        height: 100%;
-        transition: all 0.6s ease-in-out;
-    }
+.page-content {
+    font-family: 'Montserrat', sans-serif;
+    background-image: url(https://i.pinimg.com/originals/6f/7c/63/6f7c63991726d61d63730682e791d78c.gif);
+    background-color: #eee;
+    display: flex;
+    width: 100%;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+}
 
-    .sign-in-container {
-        left: 0;
-        width: 50%;
-        z-index: 2;
-    }
+.back-button {
+    position: absolute;
+    left: 5%;
+    top: 5%;
+}
 
-    .container.right-panel-active .sign-in-container {
-        transform: translateX(100%);
-    }
+.container {
+    background-color: #ffffff;
+    border-radius: 10px;
+    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25),
+        0 10px 10px rgba(0, 0, 0, 0.22);
+    position: relative;
+    overflow: hidden;
+    width: 768px;
+    max-width: 100%;
+    display: flex;
+    min-height: 480px;
+    justify-content: center;
+    align-items: center;
+}
 
-    .sign-up-container {
-        left: 0;
-        width: 50%;
+.form-container {
+    position: absolute;
+    top: 0;
+    height: 100%;
+    transition: all 0.6s ease-in-out;
+}
+
+.sign-in-container {
+    left: 0;
+    width: 50%;
+    z-index: 2;
+}
+
+.container.right-panel-active .sign-in-container {
+    transform: translateX(100%);
+}
+
+.sign-up-container {
+    left: 0;
+    width: 50%;
+    opacity: 0;
+    z-index: 1;
+}
+
+.container.right-panel-active .sign-up-container {
+    transform: translateX(100%);
+    opacity: 1;
+    z-index: 5;
+    animation: show 0.6s;
+}
+
+.forgot-password {
+    padding: 20px;
+}
+
+@keyframes show {
+
+    0%,
+    49.99% {
         opacity: 0;
         z-index: 1;
     }
 
-    .container.right-panel-active .sign-up-container {
-        transform: translateX(100%);
+    50%,
+    100% {
         opacity: 1;
         z-index: 5;
-        animation: show 0.6s;
     }
-    .forgot-password{
-        padding: 20px;
-    }
-    @keyframes show {
+}
 
-        0%,
-        49.99% {
-            opacity: 0;
-            z-index: 1;
-        }
+.overlay-container {
+    position: absolute;
+    top: 0;
+    left: 50%;
+    width: 50%;
+    height: 100%;
+    overflow: hidden;
+    transition: transform 0.6s ease-in-out;
+    z-index: 100;
+}
 
-        50%,
-        100% {
-            opacity: 1;
-            z-index: 5;
-        }
-    }
+.container.right-panel-active .overlay-container {
+    transform: translateX(-100%);
+}
 
-    .overlay-container {
-        position: absolute;
-        top: 0;
-        left: 50%;
-        width: 50%;
-        height: 100%;
-        overflow: hidden;
-        transition: transform 0.6s ease-in-out;
-        z-index: 100;
-    }
-
-    .container.right-panel-active .overlay-container {
-        transform: translateX(-100%);
-    }
-
-    .overlay {
-        /* background: #FF416C; */
-        /* background: -webkit-linear-gradient(to right, #FF4B2B, #FF416C);
+.overlay {
+    /* background: #FF416C; */
+    /* background: -webkit-linear-gradient(to right, #FF4B2B, #FF416C);
         background: linear-gradient(to right, #FF4B2B, #FF416C); */
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-position: 0 0;
-        color: #FFFFFF;
-        position: relative;
-        left: -100%;
-        height: 100%;
-        width: 200%;
-        transform: translateX(0);
-        transition: transform 0.6s ease-in-out;
-    }
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: 0 0;
+    color: #FFFFFF;
+    position: relative;
+    left: -100%;
+    height: 100%;
+    width: 200%;
+    transform: translateX(0);
+    transition: transform 0.6s ease-in-out;
+}
 
-    .container.right-panel-active .overlay {
-        transform: translateX(50%);
-    }
+.container.right-panel-active .overlay {
+    transform: translateX(50%);
+}
 
-    .overlay-panel {
-        position: absolute;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        flex-direction: column;
-        padding: 0 40px;
-        text-align: center;
-        top: 0;
-        height: 100%;
-        width: 50%;
-        transform: translateX(0);
-        transition: transform 0.6s ease-in-out;
-        background-color: #00000000;
-    }
+.overlay-panel {
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    padding: 0 40px;
+    text-align: center;
+    top: 0;
+    height: 100%;
+    width: 50%;
+    transform: translateX(0);
+    transition: transform 0.6s ease-in-out;
+    background-color: #00000000;
+}
 
-    .overlay-left {
-        transform: translateX(-20%);
-    }
+.overlay-left {
+    transform: translateX(-20%);
+}
 
-    .container.right-panel-active .overlay-left {
-        transform: translateX(0);
-    }
+.container.right-panel-active .overlay-left {
+    transform: translateX(0);
+}
 
-    .overlay-right {
-        right: 0;
-        transform: translateX(0);
-    }
+.overlay-right {
+    right: 0;
+    transform: translateX(0);
+}
 
-    .container.right-panel-active .overlay-right {
-        transform: translateX(20%);
-    }
+.container.right-panel-active .overlay-right {
+    transform: translateX(20%);
+}
 
-    .social-container {
-        margin: 20px 0;
-    }
+.social-container {
+    margin: 20px 0;
+}
 
-    .social-container a {
-        border: 1px solid #DDDDDD;
-        border-radius: 50%;
-        display: inline-flex;
-        justify-content: center;
-        align-items: center;
-        margin: 0 5px;
-        height: 40px;
-        width: 40px;
-    }
+.social-container a {
+    border: 1px solid #DDDDDD;
+    border-radius: 50%;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 5px;
+    height: 40px;
+    width: 40px;
+}
 
-    footer {
-        background-color: #222;
-        color: #fff;
-        font-size: 14px;
-        bottom: 0;
-        position: fixed;
-        left: 0;
-        right: 0;
-        text-align: center;
-        z-index: 999;
-    }
+footer {
+    background-color: #222;
+    color: #fff;
+    font-size: 14px;
+    bottom: 0;
+    position: fixed;
+    left: 0;
+    right: 0;
+    text-align: center;
+    z-index: 999;
+}
 
-    footer p {
-        margin: 10px 0;
-    }
+footer p {
+    margin: 10px 0;
+}
 
-    footer i {
-        color: red;
-    }
+footer i {
+    color: red;
+}
 
-    footer a {
-        color: #3c97bf;
-        text-decoration: none;
-    }
+footer a {
+    color: #3c97bf;
+    text-decoration: none;
+}
 
-    #app {
-        margin: 0;
-        width: 100%;
-        height: 100%;
-    }
+#app {
+    margin: 0;
+    width: 100%;
+    height: 100%;
+}
 
-    #app {
-        overflow: hidden;
-        touch-action: pan-up;
-        color: #ffffff;
-        font-family: 'Montserrat', sans-serif;
-        text-align: center;
-        text-shadow: 0 0 5px #ffffff, 0 0 20px #000, 0 0 30px #000;
-    }
-    #app h1 {
-        color: #FFFFFF;
-        text-transform: uppercase;
-    }
-    #app canvas {
-        display: block;
-        position: fixed;
-        z-index: -1;
-        top: 0;
-    }
+#app {
+    overflow: hidden;
+    touch-action: pan-up;
+    color: #ffffff;
+    font-family: 'Montserrat', sans-serif;
+    text-align: center;
+    text-shadow: 0 0 5px #ffffff, 0 0 20px #000, 0 0 30px #000;
+}
+
+#app h1 {
+    color: #FFFFFF;
+    text-transform: uppercase;
+}
+
+#app canvas {
+    display: block;
+    position: fixed;
+    z-index: -1;
+    top: 0;
+}
+
+.grid-container {
+    display: grid;
+    grid-template-columns: auto auto auto;
+    /* gap: 10px; */
+    background-color: #ffffff;
+    width: 100%;
+    height: 100%;
+}
+
+.grid-container>div {
+    background-color: rgba(255, 255, 255, 0.8);
+    text-align: center;
+    font-size: small;
+    margin: auto;
+    background-color: transparent;
+}
+
+.item2 {
+    grid-column-start: 2;
+    grid-column-end: 4;
+    margin: auto;
+    padding-right: 20px;
+}
+
+.send-code-button {
+    background-color: rgb(92, 91, 94);
+    color: wheat;
+    padding: 3px;
+}
+.change-password-button{
+    display: block;
+    margin: 0 auto;
+    padding: 10px 10px;
+    background-color: blueviolet;
+    color: wheat;
+    
+}
+.change-password-container{
+    padding: 15% 0;
+    margin: auto 10px;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    
+}
+.show-password-button{
+    background-color: rgb(232, 240, 254);
+    margin: 8px 0px;
+    padding-right: 5px;
+    padding: 12px;
+}
