modified:   src/app/auth/login/login.component.css 	modified:   src/app/auth/login/login.component.html 	modified:   src/app/auth/login/login.component.ts

--- a/src/app/auth/login/login.component.css
+++ b/src/app/auth/login/login.component.css
@@ -334,7 +334,11 @@ footer a {
     background-color: rgb(92, 91, 94);
     color: wheat;
     padding: 3px;
+    &:hover{
+        color: #ffffff;
+    }
 }
+
 .change-password-button{
     display: block;
     margin: 0 auto;
