--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,6 +1,6 @@
 <div class="page-content">
     <a routerLink="/home">
-        <button class="deffault-button" type="button" class="back-button">
+        <button class="deffault-button back-button" type="button">
             <i class="fa fa-arrow-left"></i>
             Về Trang Chủ
         </button>
@@ -21,9 +21,18 @@
                 <span>hoặc dùng email để đăng ký</span>
                 <!-- Input fields for sign-up data -->
                 <input type="email" placeholder="Email" [(ngModel)]="email" name="email" required [email]="true" />
-                <span style="display: flex; align-items: center; width: 100%;background-color: white;">
+                <span class="password-input">
                     <ng-container *ngTemplateOutlet="passwordInput; context:{ index:0 } ">
                     </ng-container>
+                </span>
+                <span class="password-input">
+                    <ng-container *ngTemplateOutlet="passwordInput; context:{ index:1 } ">
+                    </ng-container>
+                </span>
+                <span class="password-input">
+                    <input style="min-width: 0; flex-grow: 1;" type="text" placeholder="123478" [(ngModel)]="code" name="code"
+                        required />
+                    <button class="send-code-button" aria-details="gửi">Gửi Về Email</button>
                 </span>
                 <button class="deffault-button bg-primary-gradient" type="submit">Đăng Kí</button>
             </form>
@@ -43,9 +52,9 @@
                 </div>
                 <span>hoặc dùng tài khoản có sẵn</span>
                 <!-- Input fields for sign-in data -->
-                <input type="email" placeholder="Email" [(ngModel)]="email" name="email" required [email]="true" />
-                <span style="display: flex; align-items: center; width: 100%;background-color: white;">
-                    <ng-container *ngTemplateOutlet="passwordInput; context:{ index:1 } ">
+                <input type="email" placeholder="Email" [(ngModel)]="email" name="email" required />
+                <span class="password-input">
+                    <ng-container *ngTemplateOutlet="passwordInput; context:{ index:2 } ">
                     </ng-container>
                 </span>
 
@@ -56,33 +65,23 @@
 
             </form>
             } @else {
-            <!-- <div class="grid-container">
-                <div class="item1">EMail</div>
-                <div class="item2"> <input placeholder="vidu@mail.com"></div>
-                <div class="item1">Mật Khẩu</div>
-                <div class="item2"> <input type="password"></div>
-                <div class="item1">Lặp Lại Mật Khẩu</div>
-                <div class="item2"> <input type="password"></div>
-                <div class="item1">Mã Bí Mật</div>
-                <div class="item2"><input placeholder="1234-5678"></div>
-            </div> -->
             <div class="change-password-container">
-                <h2 class="font-bold">Thay Mật Khẩu Mới</h2>
+                <h2 class="font-bold m-4">Thay Mật Khẩu Mới</h2>
                 Email
                 <input placeholder="vidu@mail.com">
                 Mật Khẩu Mới
-                <span style="display: flex; align-items: center; width: 100%;background-color: white;">
-                    <ng-container *ngTemplateOutlet="passwordInput; context:{ index:2 } ">
-                    </ng-container>
-                </span>
-                Mật Khẩu Mới
-                <span style="display: flex; align-items: center; width: 100%;background-color: white;">
+                <span class="password-input">
                     <ng-container *ngTemplateOutlet="passwordInput; context:{ index:3 } ">
                     </ng-container>
                 </span>
+                Mật Khẩu Mới
+                <span class="password-input">
+                    <ng-container *ngTemplateOutlet="passwordInput; context:{ index:4 } ">
+                    </ng-container>
+                </span>
                 Mã Bí Mật
-                <span style="display: flex; align-items: center; width: 100%;background-color: white;">
-                    <input style="min-width: 0; flex-grow: 1;" type="text" placeholder="123478" [(ngModel)]="code"
+                <span class="password-input">
+                    <input style="min-width: 0; flex-grow: 1;" type="text" placeholder="123478" [(ngModel)]="code" name="code"
                         required />
                     <button class="send-code-button" aria-details="gửi">Gửi Về Email</button>
                 </span>
@@ -109,12 +108,6 @@
                         <!-- Button to switch to sign-up form -->
                         <button class="deffault-button ghost" id="signUp" (click)="togglePanel()">Đăng Ký</button>
                     </div>
-
-
-
-
-
-
                 </div>
             </div>
         </div>
@@ -123,19 +116,8 @@
 
 <ng-template #passwordInput let-index="index">
     <input style="min-width: 0; flex-grow: 1;" [type]="showPasswordButtons[index] ? 'text' : 'password'"
-        placeholder="Password" [(ngModel)]="password" name="password" required />
+        placeholder="Password" [(ngModel)]="passwords[index]" name="password" required />
     <button class="show-password-button" type="button" (click)="showPassword(index)">
         <i [class]="'fa fa-eye' + (showPasswordButtons[index] ? '-slash' : '')" aria-hidden="true"></i>
     </button>
-</ng-template>
-
-
-<ng-template #itemTemplate let-className="className" let-imageClass="imageClass" let-imageSource="imageSource"
-    let-itemName="itemName" let-itemId="itemId">
-    <span [class]="className">
-        <a [href]="'/video/'+itemId">
-            <img [class]="imageClass" [src]="imageSource" />
-            <p class="mt-2"> {{itemName}}</p>
-        </a>
-    </span>
 </ng-template>
