new file:   src/app/main/models/comment.ts 	modified:   src/app/main/pages/video-streaming/video-streaming.component.css 	modified:   src/app/main/pages/video-streaming/video-streaming.component.html 	modified:   src/app/main/pages/video-streaming/video-streaming.component.ts

--- a/src/app/main/pages/video-streaming/video-streaming.component.css
+++ b/src/app/main/pages/video-streaming/video-streaming.component.css
@@ -95,7 +95,7 @@
     gap: 10px;
 }
 
-.interact-button{
+.interact-button {
     background-color: #4e54c8;
     padding: 10px;
     transform: skew(-20deg);
@@ -135,6 +135,7 @@
     text-wrap: pretty;
     max-width: 17vw;
     margin-top: 5vh;
+
     &:hover {
         margin-top: 2vh;
     }
@@ -310,7 +311,112 @@ h2 {
     animation-duration: 11s;
 }
 
+.comment-container {
+    display: grid;
+    grid-template-columns: min(8vw, 8vh) auto min(6vw, 6vh) min(6vw, 6vh);
+    grid-template-rows: min(3vw, 3vh) auto auto;
+    background-color: transparent;
+    padding: 10px;
+    max-width: max(400px, 70vw);
+}
 
+.avatar-comment {
+    background-color: rgba(255, 255, 255, 0.8);
+    aspect-ratio: 1/1;
+    height: min(8vw, 8vh);
+    grid-column-start: 1;
+    grid-column-end: 1;
+    grid-row-start: 1;
+    grid-row-end: 4;
+}
+
+.user-name {
+    color: aqua;
+    font-weight: bold;
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row-start: 1;
+    margin-left: 1vw;
+
+}
+
+.date {
+    grid-column-start: 2;
+    grid-column-end: 5;
+    grid-row-start: 3;
+}
+
+.toggleReadOnly {
+    display: none;
+
+}
+
+/* Style the label as a button */
+.toggleReadOnly+label {
+    display: inline-flex;
+    /* Use inline-flex to align items */
+    align-items: center;
+    /* Center items vertically */
+    justify-content: center;
+    /* Center items horizontally */
+    padding: 5px 5px;
+    background-color: #007bff;
+    color: white;
+    cursor: pointer;
+    border-radius: 5px;
+    user-select: none;
+    grid-column-start: 3;
+    grid-row-start: 1;
+    text-align: center;
+    margin-bottom: 5px;
+}
+
+.edit-comment-button {
+    grid-column-start: 3;
+    grid-row-start: 1;
+    background-color: #4e54c8;
+    margin-bottom: 5px;
+}
+
+.delete-comment-button {
+    grid-column-start: 4;
+    grid-row-start: 1;
+    background-color: #4e54c8;
+    margin-bottom: 5px;
+}
+
+/* Style the textarea */
+.message {
+    width: 100%;
+    height: fit-content;
+    resize: none;
+    min-height: 3vh;
+    color: black;
+    grid-column-start: 2;
+    grid-column-end: 5;
+    grid-row-start: 2;
+    background-color: white;
+    text-overflow: ellipsis;
+    margin-left: 5px;
+    border-radius: 15px;
+    padding: 2px 30px;
+}
+.message[readOnly]{
+    background-color: rgb(223, 196, 196);
+}
+
+/* Apply readonly styling when checkbox is not checked */
+.toggleReadOnly:not(:checked)~.message {
+    pointer-events: none;
+    background-color: #ffffff;
+}
+
+/* Apply editable styling when checkbox is checked */
+.toggleReadOnly:checked~.message {
+
+    pointer-events: auto;
+    background-color: rgb(223, 196, 196);
+}
 
 @keyframes animate {
 
