modified:   src/app/main/pages/video-streaming/video-streaming.component.css 	modified:   src/app/main/pages/video-streaming/video-streaming.component.html 	modified:   src/app/main/pages/video-streaming/video-streaming.component.ts

--- a/src/app/main/pages/video-streaming/video-streaming.component.html
+++ b/src/app/main/pages/video-streaming/video-streaming.component.html
@@ -5,15 +5,19 @@
         <li></li>
         }
     </ul>
-    <div id="myModal" class="modal" (click)="closeModal()" [(hidden)]="isModalHidden">
-
-        <!-- Modal content -->
-        <div class="modal-content">
-            <span class="close" (click)="closeModal()">&times;</span>
-            <p>Some text in the Modal..</p>
-            <button>DOSOM</button>
+        <div id="myModal" class="modal" [hidden]="(deleteCommentIndex < 0)" (click)="closeModal()">
+    
+            <!-- Modal content -->
+            <div class="modal-content" (click)="$event.stopPropagation()">
+                <span class="close" (click)="closeModal()">&times;</span>
+                <div style="background-color: rgb(242, 255, 0);margin-bottom: 20px;">
+                    <p class="mt-10 text-2xl text-black font-bold">Bạn có chắc là muốn xóa bình luận này chứ ?</p>
+                    <p class="text-lg text-black italic">(Bình luận đã xóa sẽ không thể khôi phục lại)</p>
+                    <button class="accept-delete-button" (click)="deleteComment()">DOSOM</button>
+                </div>
+            </div>
         </div>
-    </div>
+    
         <div class="video-player">
             <!-- <video controls autoplay style="width: 100%;height: 100%; object-fit: contain;"
             src="https://file-examples.com/storage/fe3f15b9da66a36baa1b51a/2017/04/file_example_MP4_480_1_5MG.mp4">
@@ -179,26 +183,20 @@
     </ng-template>
 
     <ng-template #comment let-index="index">
-        <div class="comment-container">
-
-            <img class="avatar-comment" [src]="comments[index].imgURL">
-            <p class="user-name">{{comments[index].name}}</p>
-            <p class="date">{{comments[index].createAt}}</p>
-            <!-- <div> -->
-
-            @if(comments[index].isMyComment){
-
-            <!-- <input type="checkbox" class="toggleReadOnly" [id]="'toggleReadOnly'+index">
-            <label [for]="'toggleReadOnly'+index">Sửa</label> -->
-            <button class="edit-comment-button" (click)="toggleEditMode(index)">Sửa</button>
-            <button class="delete-comment-button" (click)="deleteComment(index)">xóa</button>
-
-
-            }
-            <textarea rows="2" maxlength="1000"
-                onmouseleave='this.style.height = "";this.style.height = this.scrollHeight + "px"' class="message"
-                [(ngModel)]="comments[index].text" [(readOnly)]="readonlyFields[index]"></textarea>
-            <!-- </div> -->
-        </div>
+        @if(comments[index].show){
+            <div class="comment-container">
+    
+                <img class="avatar-comment" [src]="comments[index].imgURL">
+                <p class="user-name">{{comments[index].name}}</p>
+                <p class="date">{{comments[index].createAt}}</p>
+                @if(comments[index].isMyComment){
+                <button class="edit-comment-button" (click)="toggleEditMode(index)">Sửa</button>
+                <button class="delete-comment-button" (click)="openModal(index)">xóa</button>
+                }
+                <textarea rows="2" maxlength="1000"
+                    onmouseleave='this.style.height = "";this.style.height = this.scrollHeight + "px"' class="message"
+                    [(innerText)]="comments[index].text" [(readOnly)]="readonlyFields[index]"></textarea>
+            </div>
+        }
 
     </ng-template>
