--- a/src/app/main/pages/video-streaming/video-streaming.component.css
+++ b/src/app/main/pages/video-streaming/video-streaming.component.css
@@ -194,7 +194,7 @@ h2 {
     perspective: 250px;
     position: relative;
     width: fit-content;
-    font-size:36px;
+    font-size: 36px;
     color: rgb(48, 156, 245);
     font-weight: bold;
 }
@@ -387,8 +387,9 @@ h2 {
     grid-row-start: 1;
     background-color: #4e54c8;
     margin-bottom: 5px;
-    &:hover{
-        background-color:#BF8516 ;
+
+    &:hover {
+        background-color: #BF8516;
     }
 }
 
@@ -397,8 +398,9 @@ h2 {
     grid-row-start: 1;
     background-color: #4e54c8;
     margin-bottom: 5px;
-    &:hover{
-        background-color:#BF8516 ;
+
+    &:hover {
+        background-color: #BF8516;
     }
 }
 
@@ -427,41 +429,64 @@ h2 {
 
 /* The Modal (background) */
 .modal {
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
-    padding-top: 100px; /* Location of the box */
+    position: fixed;
+    /* Stay in place */
+    z-index: 1;
+    /* Sit on top */
+    padding-top: 100px;
+    /* Location of the box */
     left: 0;
     top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-  }
-  
-  /* Modal Content */
-  .modal-content {
-    background-color: #fefefe;
-    margin: auto;
-    padding: 20px;
+    width: 100%;
+    /* Full width */
+    height: 100%;
+    /* Full height */
+    overflow: auto;
+    /* Enable scroll if needed */
+    background-color: rgb(0, 0, 0);
+    /* Fallback color */
+    background-color: rgba(0, 0, 0, 0.4);
+    /* Black w/ opacity */
+}
+
+/* Modal Content */
+.modal-content {
+    background-image: linear-gradient(45deg, #000000 25%, #f2ff00 25%, #f2ff00 50%, #000000 50%, #000000 75%, #f2ff00 75%, #f2ff00 100%);
+    background-size: 56.57px 56.57px;
+    margin: auto auto;
+    padding: 0px 20px;
     border: 1px solid #888;
-    width: 80%;
-  }
-  
-  /* The Close Button */
-  .close {
-    color: #aaaaaa;
+    width: max-content;
+    text-align: center;
+    padding-bottom: 20px;
+}
+
+/* The Close Button */
+.close {
+    color: #00fc0d;
     float: right;
-    font-size: 28px;
+    font-size: 5dvh;
     font-weight: bold;
-  }
-  
-  .close:hover,
-  .close:focus {
-    color: #000;
+}
+
+.close:hover,
+.close:focus {
+    color: #ff0000;
     text-decoration: none;
     cursor: pointer;
-  }
+}
+
+.accept-delete-button {
+    background-color: cornflowerblue;
+    margin-left: 80%;
+    width: 15%;
+    margin-top: 20px;
+    padding: 10px 0px;
+
+    &:hover {
+        background-color: red;
+    }
+}
 
 @keyframes animate {
 
