--- a/src/app/main/pages/video-streaming/video-streaming.component.html
+++ b/src/app/main/pages/video-streaming/video-streaming.component.html
@@ -5,198 +5,194 @@
         <li></li>
         }
     </ul>
-        <div id="myModal" class="modal" [hidden]="(deleteCommentIndex < 0)" (click)="closeModal()">
-    
-            <!-- Modal content -->
-            <div class="modal-content" (click)="$event.stopPropagation()">
-                <span class="close" (click)="closeModal()">&times;</span>
-                <div style="background-color: rgb(242, 255, 0);margin-bottom: 20px; padding-bottom: 10px;">
-                    <p class="mt-10 text-2xl text-black font-bold">Bạn có chắc là muốn xóa bình luận này chứ ?</p>
-                    <p class="text-lg text-black italic">(Bình luận đã xóa sẽ không thể khôi phục lại)</p>
-                    <button class="accept-delete-button" (click)="deleteComment()">DOSOM</button>
-                </div>
+    <div id="myModal" class="modal" [hidden]="(deleteCommentIndex < 0)" (click)="closeModal()">
+
+        <!-- Modal content -->
+        <div class="modal-content" (click)="$event.stopPropagation()">
+            <span class="close" (click)="closeModal()">&times;</span>
+            <div style="background-color: rgb(242, 255, 0);margin-bottom: 20px; padding-bottom: 10px;">
+                <p class="mt-10 text-2xl text-black font-bold">Bạn có chắc là muốn xóa bình luận này chứ ?</p>
+                <p class="text-lg text-black italic">(Bình luận đã xóa sẽ không thể khôi phục lại)</p>
+                <button class="accept-delete-button" (click)="deleteComment()">DOSOM</button>
             </div>
         </div>
-    
-        <div class="video-player">
-            <!-- <video controls autoplay style="width: 100%;height: 100%; object-fit: contain;"
+    </div>
+
+    <div class="video-player">
+        <!-- <video controls autoplay style="width: 100%;height: 100%; object-fit: contain;"
             src="https://file-examples.com/storage/fe3f15b9da66a36baa1b51a/2017/04/file_example_MP4_480_1_5MG.mp4">
         </video> -->
-            <iframe loading="lazy" width="100%" height="100%" [src]="currentMovie.link" frameborder="0"
-                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
-        </div>
-        <div class="detail-film-container">
-            <div class="name-detail">
-                <h1 class="text-white text-4xl mt-4 font-bold" [innerText]="currentMovieTitle"></h1>
-                <p class="text-2xl m-2" [innerText]="'Mùa 1'"></p>
-                <p class="text-xl m-2">{{currentMovieDetail.year}} - 1/1 Tập - {{currentMovieDetail.country}}</p>
-                <p class="summary" [innerText]="currentMovieDetail.summary"></p>
-                <div id="rating" (mouseleave)="leaveStarListener()">
-                    <i class="fa fa-star" style="font-size:36px; color:rgb(48, 156, 245); text-align: left;">
-                    </i> Đánh Giá
-                    <br>
-                    @for (start of stars; track $index) {
-                    <span (mouseenter)="enterStarListener($index)" (click)="selectStar($index)"
-                        [ngClass]="{'hover': $index <= hoverIndex}">
-                        ★
-                    </span>
-                    }
-                </div>
+        <iframe loading="lazy" width="100%" height="100%" [src]="currentMovie.link" frameborder="0"
+            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
+    <div class="detail-film-container">
+        <div class="name-detail">
+            <h1 class="text-white text-4xl mt-4 font-bold" [innerText]="currentMovieTitle"></h1>
+            <p class="text-2xl m-2" [innerText]="'Mùa 1'"></p>
+            <p class="text-xl m-2">{{currentMovieDetail.year}} - 1/1 Tập - {{currentMovieDetail.country}}</p>
+            <p class="summary" [innerText]="currentMovieDetail.summary"></p>
+            <div id="rating" (mouseleave)="leaveStarListener()">
+                <i class="fa fa-star" style="font-size:36px; color:rgb(48, 156, 245); text-align: left;">
+                </i> Đánh Giá
+                <br>
+                @for (start of stars; track $index) {
+                <span (mouseenter)="enterStarListener($index)" (click)="selectStar($index)"
+                    [ngClass]="{'hover': $index <= hoverIndex}">
+                    ★
+                </span>
+                }
             </div>
-            <div class="director-detail mt-5">
-                <button [class]="'interact-button text-lg mr-3 ' + (currentMovieDetail.isFollowed ? 'text-red-500':'')"
-                    (click)="currentMovieDetail.isFollowed = !currentMovieDetail.isFollowed"><i [ngClass]="{
+        </div>
+        <div class="director-detail mt-5">
+            <button [class]="'interact-button text-lg mr-3 ' + (currentMovieDetail.isFollowed ? 'text-red-500':'')"
+                (click)="currentMovieDetail.isFollowed = !currentMovieDetail.isFollowed"><i [ngClass]="{
                 'fa': true,
                 'fa-heart': currentMovieDetail.isFollowed,
                 'fa-heart-o': !currentMovieDetail.isFollowed
               }" [style.color]="currentMovieDetail.isFollowed ? 'red' : ''"> </i> Theo dõi
-                </button>
+            </button>
 
-                <button class="interact-button text-lg"><i class="fa fa-share-alt" style="font-size:24px"></i>
-                    Chia sẻ</button>
-                <p class="mt-4 text-2xl"><b>Thể Loại: </b>
-                    @for (genre of currentMovieDetail.genres; track $index) {
-                    {{genre}},
-                    }
-                </p>
-            </div>
+            <button class="interact-button text-lg"><i class="fa fa-share-alt" style="font-size:24px"></i>
+                Chia sẻ</button>
+            <p class="mt-4 text-2xl"><b>Thể Loại: </b>
+                @for (genre of currentMovieDetail.genres; track $index) {
+                {{genre}},
+                }
+            </p>
         </div>
-        <ng-container *ngTemplateOutlet="videoList;
+    </div>
+    <ng-container *ngTemplateOutlet="videoList;
         context:{
         titleSection: 'Danh Sách Tập',
         items: episodes,
         pageNumberIndex: 0
         }
     ">
-        </ng-container>
+    </ng-container>
 
-        <ng-container *ngTemplateOutlet="videoList;
+    <ng-container *ngTemplateOutlet="videoList;
         context:{
            titleSection: 'Các Mùa',
            items: seasons,
            pageNumberIndex: 1
         }
     ">
-        </ng-container>
+    </ng-container>
 
-        <ng-container *ngTemplateOutlet="videoList;
+    <ng-container *ngTemplateOutlet="videoList;
         context:{
         titleSection: 'Khá Liên Quan',
         items: relates,
         pageNumberIndex:2  
         }
     ">
-        </ng-container>
+    </ng-container>
 
 
-        <div class="title">
-            <h1>Diễn Viên</h1>
-            <div class="avatar-list">
-                @for (actor of currentMovieDetail.actors; track $index) {
-                <span class="avatar-item">
-                    <img class="avatar-image"
-                        src="https://i.pinimg.com/474x/3f/3a/d1/3f3ad18a365a1668940d93b6cfc20591.jpg" />
-                    <p>{{actor.name}}</p>
-                    <p>({{actor.role}})</p>
-                </span>
-                }
-
-            </div>
+    <div class="title">
+        <h1>Diễn Viên</h1>
+        <div class="avatar-list">
+            @for (actor of currentMovieDetail.actors; track $index) {
+            <span class="avatar-item">
+                <img class="avatar-image"
+                    src="https://i.pinimg.com/474x/3f/3a/d1/3f3ad18a365a1668940d93b6cfc20591.jpg" />
+                <p>{{actor.name}}</p>
+                <p>({{actor.role}})</p>
+            </span>
+            }
 
         </div>
-        <ng-container *ngTemplateOutlet="videoList;
+
+    </div>
+    <ng-container *ngTemplateOutlet="videoList;
         context:{
            titleSection: 'Phim siêu nóng',
            items: topHot,
            pageNumberIndex:3  
         }
     ">
-        </ng-container>
+    </ng-container>
 
 
 
-        <div class="title">
-            <h1>Bình Luận</h1>
-            <div style="display: flex; flex-wrap: wrap;">
-                <div style="flex-grow: 1; margin-right: 10px;">
-                    <div class="new-comment-container">
-                        <img class="avatar-comment" [src]="comments[0].imgURL">
-                        <p class="user-name">current user name</p>
-                        <!-- <p class="date">{{comments[index].createAt}}</p> -->
-
-                        <textarea placeholder="Phim này nhà tôi làm. Mọi người chia sẻ nhiều vào nhé !!" rows="2"
-                            maxlength="1000"
-                            onmouseleave='this.style.height = "";this.style.height = this.scrollHeight + "px"'
-                            class="message" [(ngModel)]="newCommentText"></textarea>
-                        <button class="send-new-comment-button" (click)="sendCommentToServer()">Gửi</button>
-                    </div>
+    <div class="title">
+        <h1>Bình Luận</h1>
+        <div style="display: flex; flex-wrap: wrap;">
+            <div style="flex-grow: 1; margin-right: 10px;">
+                <div class="new-comment-container">
+                    <img class="avatar-comment" [src]="newComment.imgURL">
+                    <p class="user-name">{{newComment.name}}</p>
+                    <textarea placeholder="Phim này nhà tôi làm. Mọi người chia sẻ nhiều vào nhé !!" rows="2"
+                        maxlength="1000"
+                        onmouseleave='this.style.height = "";this.style.height = this.scrollHeight + "px"'
+                        class="message" [(ngModel)]="newComment.text"></textarea>
+                    <button class="send-new-comment-button" (click)="sendCommentToServer()">Gửi</button>
                 </div>
-                <div style="flex-grow: 1;">
-                    @for(cmt of comments;track $index){
-                    <ng-container *ngTemplateOutlet="comment;
+            </div>
+            <div style="flex-grow: 1;">
+                @for(cmt of comments;track $index){
+                <ng-container *ngTemplateOutlet="comment;
                         context:{
                             index:$index
                         }
                         ">
-                    </ng-container>
-                    }
-                </div>
-            </div>
-
-
-        </div>
-
-    </div>
-
-    <ng-template #itemTemplate let-className="className" let-imageClass="imageClass" let-imageSource="imageSource"
-        let-itemName="itemName" let-itemId="itemId">
-        <span [class]="className">
-            <a [href]="'/video/'+itemId">
-                <img [class]="imageClass" [src]="imageSource" />
-                <p class="mt-2"> {{itemName}}</p>
-            </a>
-        </span>
-    </ng-template>
-
-    <ng-template #videoList let-titleSection="titleSection" let-items="items" let-pageNumberIndex="pageNumberIndex">
-        <div class="title">
-            <h1>{{titleSection}}</h1>
-
-            <span class="video-list-control">
-                <button (click)="decreasePageNumber(pageNumberIndex)"><i class="fa fa-arrow-left"
-                        style="font-size:24px"></i></button>
-                <input type="number" required size="4" [(ngModel)]="pageNumber[pageNumberIndex]">
-                <button class="jump-page-button">NHẢY</button>
-                <button (click)="increasePageNumber(pageNumberIndex)"><i class="fa fa-arrow-right"
-                        style="font-size:24px"></i></button>
-            </span>
-
-            <div class="video-list">
-                @for (item of items; track $index;) {
-                <ng-container
-                    *ngTemplateOutlet="itemTemplate; context: {className: 'video-item', imageClass: 'video-thumbnail', imageSource:item.thumbnailImage, itemName:item.title,itemId:item.id}">
                 </ng-container>
                 }
             </div>
         </div>
-    </ng-template>
 
-    <ng-template #comment let-index="index">
-        @if(comments[index].show){
-            <div class="comment-container">
-    
-                <img class="avatar-comment" [src]="comments[index].imgURL">
-                <p class="user-name">{{comments[index].name}}</p>
-                <p class="date">{{comments[index].createAt}}</p>
-                @if(comments[index].isMyComment){
-                <button class="edit-comment-button" (click)="toggleEditMode(index)">Sửa</button>
-                <button class="delete-comment-button" (click)="openModal(index)">xóa</button>
-                }
-                <textarea rows="2" maxlength="1000"
-                    onmouseleave='this.style.height = "";this.style.height = this.scrollHeight + "px"' class="message"
-                    [(innerText)]="comments[index].text" [(readOnly)]="readonlyFields[index]"></textarea>
-            </div>
+
+    </div>
+
+</div>
+
+<ng-template #itemTemplate let-className="className" let-imageClass="imageClass" let-imageSource="imageSource"
+    let-itemName="itemName" let-itemId="itemId">
+    <span [class]="className">
+        <a [href]="'/video/'+itemId">
+            <img [class]="imageClass" [src]="imageSource" />
+            <p class="mt-2"> {{itemName}}</p>
+        </a>
+    </span>
+</ng-template>
+
+<ng-template #videoList let-titleSection="titleSection" let-items="items" let-pageNumberIndex="pageNumberIndex">
+    <div class="title">
+        <h1>{{titleSection}}</h1>
+
+        <span class="video-list-control">
+            <button (click)="decreasePageNumber(pageNumberIndex)"><i class="fa fa-arrow-left"
+                    style="font-size:24px"></i></button>
+            <input type="number" required size="4" [(ngModel)]="pageNumber[pageNumberIndex]">
+            <button class="jump-page-button">NHẢY</button>
+            <button (click)="increasePageNumber(pageNumberIndex)"><i class="fa fa-arrow-right"
+                    style="font-size:24px"></i></button>
+        </span>
+
+        <div class="video-list">
+            @for (item of items; track $index;) {
+            <ng-container
+                *ngTemplateOutlet="itemTemplate; context: {className: 'video-item', imageClass: 'video-thumbnail', imageSource:item.thumbnailImage, itemName:item.title,itemId:item.id}">
+            </ng-container>
+            }
+        </div>
+    </div>
+</ng-template>
+
+<ng-template #comment let-index="index">
+    <div class="comment-container" [hidden]="comments[index].commenId < 0">
+
+        <img class="avatar-comment" [src]="comments[index].imgURL">
+        <p class="user-name">{{comments[index].name}}</p>
+        <p class="date">{{comments[index].createAt}}</p>
+        @if(comments[index].isMyComment){
+        <button class="edit-comment-button" (click)="toggleEditMode(index)">Sửa</button>
+        <button class="delete-comment-button" (click)="openModal(index)">xóa</button>
         }
+        <textarea maxlength="1000" 
+        class="message" [(ngModel)]="comments[index].text" [(readOnly)]="readonlyFields[index]"></textarea>
+        <!-- on='this.style.height = "";this.style.height = this.scrollHeight + "px"' -->
+    </div>
 
-    </ng-template>
+
+</ng-template>
